--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -70,7 +70,7 @@
   }
   
   /* 인증 코드 버튼 스타일 */
-  .authButton {
+  .authButton, .authSendButton {
     background-color: #5f6fc7; /* 버튼 배경색 */
     color: white; /* 폰트 색상 */
     border: none; /* 테두리 제거 */
@@ -83,7 +83,7 @@
     flex-shrink: 0; /* 버튼이 수축하지 않도록 설정 */
   }
   
-  .authButton:hover {
+  .authButton, .authSendButton:hover {
     background-color: #4a5bb5; /* 마우스 hover 시 버튼 배경색 변경 */
   }
   
@@ -145,4 +145,6 @@
   a:hover {
     color: #5f6fc7;
   }
+  
+  
   
