--- a/frontend/src/components/Popup/Popup.css
+++ b/frontend/src/components/Popup/Popup.css
@@ -1,4 +1,3 @@
-/* 기본 스타일 */
 .popup-overlay {
     position: fixed;
     top: 0;
@@ -81,17 +80,18 @@
   /* 반응형 스타일 */
   @media (max-width: 768px) {
     .popup-container {
-      width: 90%;
+      width: 65%;
       padding: 15px;
     }
   
     .popup-header {
-      flex-direction: column;
-      align-items: flex-start;
-    }
+        flex-direction: row;         /* 원래대로 가로 정렬 */
+        align-items: center;         /* 수직 중앙 정렬 */
+        justify-content: space-between;  /* 좌우 여백 유지 */
+      }
   
     .close-btn {
-      font-size: 1.2em;
+      font-size: 1.6em;
     }
   
     .input-group input,
@@ -100,40 +100,47 @@
     }
   
     .submit-btn {
-      width: 100%;
+      width: 21%;
       padding: 12px;
+      max-width: 90px;
     }
   }
   
   @media (max-width: 480px) {
     .popup-container {
-      width: 80%;
+      width: 85%;
       padding: 10px;
     }
   
     .popup-header {
-      flex-direction: column;
-      align-items: flex-start;
-    }
+        flex-direction: row;         /* 원래대로 가로 정렬 */
+        align-items: center;         /* 수직 중앙 정렬 */
+        justify-content: space-between;  /* 좌우 여백 유지 */
+      }
   
     .close-btn {
-      font-size: 1em;
+        font-size: 1.3em;
     }
 
     h2 {
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
   
     .input-group input,
     .input-group textarea {
       font-size: 0.7em;
-      width: 95%;
+      width: 90%;
 
     }
   
     .submit-btn {
       padding: 12px;
+      width: 20%;
+      min-width: 75px;
     }
+
+    .input-group label {
+        font-size: 1em; 
+      }
+
   }
-  
-  
