--- a/frontend/src/components/AcceptInvitation/AcceptInvitation.css
+++ b/frontend/src/components/AcceptInvitation/AcceptInvitation.css
@@ -8,21 +8,7 @@
     font-family: 'Noto Sans KR', sans-serif;
   }
   
-  .accept-box {
-    background: white;
-    padding: 3vw 4vw;
-    border-radius: 1.2vw;
-    box-shadow: 0 1vw 2vw rgba(0, 0, 0, 0.2);
-    text-align: center;
-    width: 80%;
-    max-width: 480px;
-  }
-  
-  .accept-title {
-    font-size: 2vw;
-    margin-bottom: 1.5vw;
-    color: #333;
-  }
+ 
   
   .accept-message {
     font-size: 1.2vw;
@@ -58,7 +44,7 @@
   .welcome-popup {
     text-align: center;
     margin-top: 2vw;
-    background-color: #f5f5f5;
+    background-color: white;
     border-radius: 1.2vw;
     padding: 2vw;
     box-shadow: 0 0.4vw 1vw rgba(0, 0, 0, 0.1);
