관리 api 구현 전 수정

--- a/frontend/src/components/AcceptInvitation/AcceptInvitation.css
+++ b/frontend/src/components/AcceptInvitation/AcceptInvitation.css
@@ -8,20 +8,38 @@
     font-family: 'Noto Sans KR', sans-serif;
   }
   
- 
+  .accept-box {
+    background-color: white;
+    padding: 3vw 2.5vw;
+    border-radius: 1vw;
+    box-shadow: 0 0.5vw 1vw rgba(0, 0, 0, 0.1);
+    position: relative;
+    width: 42vw;
+    min-height: 45vh;
+    box-sizing: border-box;
+  }
+  
+  .accept-title {
+    font-size: 1.6vw;
+    margin-bottom: 1.5vw;
+    color: #333;
+    text-align: center;
+  }
   
   .accept-message {
     font-size: 1.2vw;
     margin-bottom: 2vw;
     color: #555;
     line-height: 1.5;
+    text-align: center;
   }
   
   .accept-error {
-    color: red;
+    color: black;
     font-size: 1.1vw;
     font-weight: 600;
-    margin-top: 1vw;
+    margin-top: 0.5vw;
+    text-align: center;
   }
   
   .accept-btn {
@@ -35,54 +53,119 @@
     cursor: pointer;
     box-shadow: 0 0.4vw 0.8vw rgba(0, 0, 0, 0.2);
     transition: 0.2s ease;
+    display: block;
+    margin: 0 auto;
   }
   
   .accept-btn:hover {
     opacity: 0.9;
   }
-
+  
   .welcome-popup {
-    text-align: center;
-    margin-top: 2vw;
     background-color: white;
     border-radius: 1.2vw;
-    padding: 2vw;
-    box-shadow: 0 0.4vw 1vw rgba(0, 0, 0, 0.1);
+    padding: 2vw 2.5vw;
     font-size: 1.2vw;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100%;
+    max-width: 42vw;
+    min-height: 50vh;
+    box-sizing: border-box;
   }
   
   .welcome-popup h3 {
-    font-size: 1.6vw;
-    margin-bottom: 1vw;
+    font-size: 1.5vw;
+    margin-bottom: 0.2vw;
+    padding: 0;
+    text-align: left;
+    width: 100%;
   }
   
-  .welcome-popup .welcome-desc {
-    margin-top: 1.5vw;
-    padding: 1.5vw;
-    background: #e0e0e0;
+  .welcome-popup p {
+    font-size: 1.2vw;
+    margin-bottom: 2vw;
+    padding: 0;
+    text-align: left;
+    width: 100%;
+  }
+  
+  .welcome-desc {
+    padding: 1.5vw 2vw;
+    border: 1px solid #ccc;
+    background: white;
     border-radius: 1vw;
     font-size: 1.1vw;
     line-height: 1.6;
+    min-height: 30vh;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
   }
   
+  .welcome-close {
+    position: absolute;
+    top: 1vw;
+    right: 1vw;
+    background: transparent;
+    border: none;
+    font-size: 2vw;
+    cursor: pointer;
+    color: #555;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
   /* 반응형 */
   @media (max-width: 768px) {
     .accept-box {
-      padding: 5vw 6vw;
+      width: 90vw;
+      padding: 5vw 4vw;
+      min-height: 55vh;
     }
+  
     .accept-title {
       font-size: 5vw;
     }
+  
     .accept-message {
       font-size: 3.5vw;
     }
+  
     .accept-error {
       font-size: 3.5vw;
     }
+  
     .accept-btn {
       font-size: 3.5vw;
       padding: 2vw 5vw;
     }
-  }
   
+    .welcome-popup {
+      padding: 4vw 5vw;
+      min-height: 50vh;
+      max-width: 90vw;
+    }
+  
+    .welcome-popup h3 {
+      font-size: 4vw;
+    }
+  
+    .welcome-popup p {
+      font-size: 3.5vw;
+    }
+  
+    .welcome-desc {
+      font-size: 3vw;
+      padding: 3vw 4vw;
+      min-height: 35vh;
+    }
+  
+    .welcome-close {
+      font-size: 5vw;
+    }
+  }  
